prevent footer from overflowing

--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,5 @@
   &::after {
     background-color: #862e86;
   }
+  overflow-x: hidden;
 }
